test/data/syntax-errors/invalid-expression.jen
print(3 + 5 > 2 * 1 && )

x := 3 +-*/++
